--- a/p44sbb-config/files/www/tweak.html
+++ b/p44sbb-config/files/www/tweak.html
@@ -9,9 +9,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
-    <script src="js/jquery-1.9.1.min.js"></script>
-    <script src="js/jquery.mobile-1.3.2.min.js"></script>
+  	<link rel="stylesheet" href="/css/themes/p44dark.min.css">
+  	<link rel="stylesheet" href="/css/themes/p44dark.cust.css">
+		<link rel="stylesheet" href="/css/themes/jquery.mobile.icons.min.css" />
+		<link rel="stylesheet" href="/css/jquery.mobile.structure-1.4.5.min.css" />
+	  <script src="/js/jquery.min.js"></script>
+	  <script src="/js/jquery.mobile-1.4.5.min.js"></script>
 
     <title>Tweaking</title>
 
@@ -65,16 +68,18 @@
           }
         }
         selectHtml +=
-          '<option disabled>templates</option>' +
+          '<option disabled>featureapi templates</option>' +
           '<option value="1000">{ "run":"log(5,\"script run from API\")" }</option>' +
-          '<option value="1000">{ "eventscript":"log(5,message())" }</option>' +
-          '<option value="1000">{ "triggerexpression":"every(0:01)" }</option>' +
           '<option value="1000">{ "cmd":"status" }</option>' +
           '<option value="1001">{ "cmd":"now" }</option>' +
           '<option value="1030">{ "cmd":"init", "splitflaps": { "modules":[ { "name":"hour", "addr":6, "type":"hour" } }</option>' +
           '<option value="1200">{ "feature":"splitflaps", "cmd":"position", "name":"hour", "value":19 }</option>' +
           '<option value="1200">{ "feature":"splitflaps", "cmd":"raw", "data":"FFD006" }</option>' +
-          '<option value="1200">{ "level":6 }</option>';
+          '<option disabled>mainscript templates</option>' +
+          '<option value="2000">{ }</option>' +
+          '<option value="2001">{ "stop":true, "code":"log(' + "'hello mainscript'" +')", "save":true, "run":true" }</option>' +
+          '<option disabled>log templates</option>' +
+          '<option value="3000">{ "level":6 }</option>';
 
         $('#jsonExamples').html(selectHtml).trigger('create');
         $('#jsonExamples').val(0).selectmenu('refresh');
@@ -168,6 +173,8 @@
           <select onchange="javascript:apiSelected();" name="apiExamples" id="apiExamples">
             <option value="0">- select template -</option>
             <option value="1">api/json/featureapi</option>
+            <option value="1">api/json/mainscript</option>
+            <option value="1">api/json/scriptapi</option>
             <option value="3">api/json/log</option>
             <option value="99">tok/json</option>
           </select>
