--- a/p44sbb-config/files/www/index.html
+++ b/p44sbb-config/files/www/index.html
@@ -18,7 +18,7 @@
 
     <title id="html_title_model">P44-SBB</title>
 
-    <style type="text/css"><!--
+    <style type="text/css">
       h1 { font-family:Helvetica; font-size:24pt; }
       h2 { font-family:Helvetica; font-size:18pt; }
 
@@ -75,10 +75,10 @@
         height: 21px;
       }
 
-    --></style>
+    </style>
 
 
-    <script type="text/javascript"><!--
+    <script type="text/javascript">
 
       var restartLocation = window.location.href;
 
@@ -133,6 +133,56 @@
       }
 
 
+      function escapehtml(htmltext)
+      {
+        return $("<div>").text(htmltext).html();
+      }
+
+
+      function mg44Call(uri, jsonquery, timeout)
+      {
+        // mg44 based API
+        var dfd = $.Deferred();
+        if (rqvaltok===false) {
+          // need to fetch token first
+          $.getJSON('/tok/json' , {
+          }).done(function(response) {
+            rqvaltok = response;
+            mg44Call(uri, jsonquery, timeout).done(function(response) {
+              dfd.resolve(response);
+            }).fail(function(domain, code, message) {
+              dfd.reject(domain, code, message);
+            });
+          }).fail(function() {
+            console.log('TOK error ' + response.error.message);
+            dfd.reject("mg44", -1, "cannot get token");
+          });
+        }
+        else {
+          var url = uri + '?rqvaltok=' + rqvaltok;
+          var jdata = JSON.stringify(jsonquery);
+          var xhr = $.ajax({
+            url: url,
+            type: 'post',
+            dataType: 'json',
+            timeout: timeout,
+            data: jdata
+          }).done(function(response) {
+            dfd.resolve(response);
+          }).fail(function(jqXHR, textStatus, errorThrown) {
+            // unsuccessful at the AJAX API level
+            dfd.reject("ajax", -1, textStatus + "(" + errorThrown.message + " accessing '" + url + "' data='" + jdata + "')");
+          });
+        }
+        var promise = dfd.promise();
+        promise.abort = function() { xhr.abort(); }
+        return promise;
+      }
+
+
+      // Main Page
+      // =========
+
       $(function()
       {
         // Initialize
@@ -140,6 +190,8 @@
         $.getJSON( '/tok/json' , {
         }).done( function(response) {
           rqvaltok = response;
+          // load module info
+          loadModules();
         }).fail(function(response, status) {
           console.log('TOK error ' + response.error.message);
         });
@@ -147,53 +199,70 @@
       });
 
 
-      // Common utils
 
-      // Main Page
-      // =========
-
-
-      function uploadImage()
+      function loadModules()
       {
-        var file = $('#imageFile').get(0).files[0];
-        var data = new FormData();
-        data.append("upload_file", file);
-        $.ajax({
-          url: '/api/upload/?rqvaltok=' + rqvaltok + '&cmd=imageupload',
-          data: data,
-          contentType: false, // important!
-          processData: false,
-          method: 'POST'
-        }).done(function(response) {
-          alert('Image uploaded');
-        }).fail(function() {
-          alert('Image upload failed');
+        mg44Call('api/json/scriptapi', { "cmd":"info" }, 10000, false).done(function(response) {
+          // run through module array
+          var modulesHtml = '<table style="width:95vw;">';
+          for (var i=0; i<response.length; i++) {
+            var m = response[i];
+            modulesHtml +=
+              '<tr><td>' + m.title + '</td><td>' +
+              '<select onchange="setFlap(' + i.toString() + ')" name="mod' + i.toString() + '_select" id="mod' + i.toString() + '_select" data-mini="false" >';
+            // choices
+            if (m.choices) {
+              for (var j=0; j<m.choices.length; j++) {
+                var c = m.choices[j];
+                modulesHtml += '<option value="' + c.flap +'"';
+                if (c.flap==m.current) modulesHtml += " selected";
+                modulesHtml += '>' + c.text +'</option>' + "\n";
+              }
+            }
+            else {
+              for (var j=m.min; j<=m.max; j++) {
+                modulesHtml += '<option value="' + j.toString() +'"';
+                if (j==m.current) modulesHtml += " selected";
+                modulesHtml += '>Blatt Nummer ' + j + '</option>' + "\n";
+              }
+            }
+            modulesHtml += '</select></td></tr>' + "\n";
+          }
+          modulesHtml += '</table>';
+          $("#modulesList").html(modulesHtml).trigger('create');
+          $("#message").html('');
+        }).fail(function(domain, code, message) {
+          $("#message").html('error: [' + domain + '] Error ' + code.toString() + ': ' + message);
         });
       }
 
-
-      function system_restore_apply(mode)
+      function setFlap(modnum)
       {
-        $("#configRestoreDialog").popup("close");
-        // trigger factory reset
-        $.ajax({
-          url: '/cfg/json/?rqvaltok=' + rqvaltok,
-          type: 'post',
-          dataType: 'json',
-          data: JSON.stringify({ cmd:'configrestoreapply', mode:mode.toString() })
-        })
-        .done(function(response) {
-          // NOP for now
+        var req = {
+          "cmd":"set",
+          "modnum":modnum,
+          "flap":$('#mod'+modnum+'_select').val()
+        };
+        mg44Call('api/json/scriptapi', req, 10000, false).done(function(response) {
+          $("#message").html('');
+        }).fail(function(domain, code, message) {
+          $("#message").html('error: [' + domain + '] Error ' + code.toString() + ': ' + message);
         });
-        // if not cancel, wait for restart
-        if (mode!=0) {
-          setTimeout(function() {
-            waitForRestart("#restoreConfigWait");
-          }, 100 );
-        }
       }
 
-    --></script>
+      function cmd(command)
+      {
+        var req = {
+          "cmd":command
+        };
+        mg44Call('api/json/scriptapi', req, 10000, false).done(function(response) {
+          loadModules();
+        }).fail(function(domain, code, message) {
+          $("#message").html('error: [' + domain + '] Error ' + code.toString() + ': ' + message);
+        });
+      }
+
+    </script>
 
   </head>
 
@@ -405,8 +474,13 @@
         </div>
       </div>
       <div data-role="content">
-        <div data-role="content">
-          <h2>tbd</h2>
+        <h2>Splitflap Control</h2>
+        <div id="modulesList"></div>
+        <div style="padding:10px; color=red;" id="message"></div>
+        <div id="buttons">
+          <button onclick="cmd('updateclock')">Uhr genau setzen</button>
+          <button onclick="cmd('updaterandomdelay')">UngenaUhr</button>
+          <button onclick="cmd('updaterandom')">Zufällige Orte+Zugtypen</button>
         </div>
       </div>
 
