--- a/p44sbb-config/files/www/repl.html
+++ b/p44sbb-config/files/www/repl.html
@@ -77,7 +77,7 @@
       function refreshExamples()
       {
         var selectHtml =
-          '<option value="0">- select example -</option>';
+          '<option value="0">- select example / from history -</option>';
         if (jsonhistory.length>0) {
           selectHtml +=
             '<option disabled>history</option>';
@@ -91,8 +91,8 @@
           '<option value="1000">log("hello world")</option>' +
           '<option value="1001">glob x=42</option>' +
           '<option value="1002">function hello(what) { log("hello "+what) }</option>' +
-          '<option value="1003">on (every(0:10)) { log("another ten minutes have passed") }</option>';
-          '<option value="1003">undeclare()</option>';
+          '<option value="1003">on (every(0:10)) { log("another ten minutes have passed") }</option>' +
+          '<option value="1004">undeclare()</option>';
         $('#scriptExamples').html(selectHtml).trigger('create');
         $('#scriptExamples').val(0).selectmenu('refresh');
       }
