--- a/hmt20-config/files/www/tweak.html
+++ b/hmt20-config/files/www/tweak.html
@@ -9,9 +9,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
-    <script src="js/jquery-1.9.1.min.js"></script>
-    <script src="js/jquery.mobile-1.3.2.min.js"></script>
+  	<link rel="stylesheet" href="/css/themes/p44dark.min.css">
+  	<link rel="stylesheet" href="/css/themes/p44dark.cust.css">
+		<link rel="stylesheet" href="/css/themes/jquery.mobile.icons.min.css" />
+		<link rel="stylesheet" href="/css/jquery.mobile.structure-1.4.5.min.css" />
+	  <script src="/js/jquery.min.js"></script>
+	  <script src="/js/jquery.mobile-1.4.5.min.js"></script>
 
     <title>Tweaking</title>
 
@@ -29,12 +32,6 @@
     --></style>
 
     <script language="javascript1.2" type="text/javascript"><!--
-
-      var restartLocation = window.location.href;
-
-      var focusdevice;
-
-      var tickDiff = false;
 
     	var rqvaltok="";
 
@@ -71,7 +68,7 @@
           }
         }
         selectHtml +=
-          '<option disabled>templates</option>' +
+          '<option disabled>featureapi templates</option>' +
           '<option value="1000">{ "run":"log(5,\"script run from API\")" }</option>' +
           '<option value="1000">{ "eventscript":"log(5,message())" }</option>' +
           '<option value="1000">{ "cmd":"status" }</option>' +
@@ -185,6 +182,8 @@
           <select onchange="javascript:apiSelected();" name="apiExamples" id="apiExamples">
             <option value="0">- select template -</option>
             <option value="1">api/json/featureapi</option>
+            <option value="1">api/json/mainscript</option>
+            <option value="1">api/json/scriptapi</option>
             <option value="3">api/json/log</option>
             <option value="99">tok/json</option>
           </select>
